# SimpleCMakeProject

./: CMakeLists.txt
.github/workflows/: codeql.yml
SimpleCMakeProject/: CMakeLists.txt  SimpleCMakeProject.cpp  SimpleCMakeProject.h
